refactor: 로그인 웹 세션 구조 변경 및 네이밍 수정,  클래스 Init 추가  ghojeong/issue-tracker/#34

--- a/mobile/issue-tracker/issue-tracker/New Group/Base.lproj/Main.storyboard
+++ b/mobile/issue-tracker/issue-tracker/New Group/Base.lproj/Main.storyboard
@@ -54,7 +54,26 @@
                             <constraint firstItem="p5k-Wn-cPB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="umt-ER-qZk"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="이슈" id="mOm-yL-60z"/>
+                    <navigationItem key="navigationItem" title="이슈" id="mOm-yL-60z">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="BoX-L2-vOU">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="Zow-Uf-xNX">
+                                <rect key="frame" x="20" y="11" width="56" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="8" maxY="0.0"/>
+                                <state key="normal" title="필터" image="line.horizontal.3.decrease" catalog="system"/>
+                            </button>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="NBT-zC-88Q">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="hyN-3e-bj3">
+                                <rect key="frame" x="339" y="10" width="55" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <inset key="imageEdgeInsets" minX="4" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="선택" image="checkmark.circle" catalog="system"/>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -158,8 +177,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="checkmark.circle" catalog="system" width="128" height="121"/>
         <image name="circle" catalog="system" width="128" height="121"/>
         <image name="exclamationmark.circle" catalog="system" width="128" height="121"/>
+        <image name="line.horizontal.3.decrease" catalog="system" width="128" height="73"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="signpost.right" catalog="system" width="128" height="118"/>
         <image name="tag" catalog="system" width="128" height="119"/>
